--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
   "version": 2,
-  "builds": [
+  "routes": [
     {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.js"
+      "src": "/products",
+      "dest": "/api/index.js"
     }
   ]
 }
