--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "api/index.js",
-  "engines": {
-    "node": "16.x"
-  },
+  "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
   },
