--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/**/*.{js,ts}": {
-      "runtime": "nodejs16.x"
+      "runtime": "nodejs20.17.0"
     }
   },
   "routes": [
