--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.2",
-    "multer": "^1.4.5-lts.1",
-    "serverless-http": "^3.2.0"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
